<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:elevation="20dp"
        android:clipToPadding="false"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:tintMode="src_atop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/app_header_background"
                app:tint="@color/transparentBlack"
                />



            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="62dp"
                android:layout_marginBottom="63dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                app:srcCompat="@drawable/lakers_logo" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_marginTop="62dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="63dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                app:srcCompat="@drawable/thunders_logo" />

            <TextView
                android:id="@+id/laker_score"
                style="@style/MainText"
                android:layout_marginStart="20dp"
                android:layout_marginTop="92dp"
                android:text="@string/default_score"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/thunders_score"
                style="@style/MainText"
                android:layout_marginTop="92dp"
                android:layout_marginEnd="20dp"
                android:text="@string/default_score"
                app:layout_constraintEnd_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView3"
                style="@style/MainText"
                android:layout_marginTop="92dp"
                android:text="@string/dash"
                app:layout_constraintEnd_toStartOf="@+id/thunders_score"
                app:layout_constraintHorizontal_bias="0.48"
                app:layout_constraintStart_toEndOf="@+id/laker_score"
                app:layout_constraintTop_toTopOf="@+id/imageView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card">


        <LinearLayout
            android:layout_marginTop="10sp"
            android:id="@+id/quote"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:gravity="center"
                android:text="@string/match_details"
                android:textColor="#000"
                android:lineSpacingMultiplier="1.5"
                android:textStyle="bold"
                android:textSize="22sp"/>




            <TableLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <TableRow android:layout_width="match_parent"
                    android:paddingBottom="10dp">

                    <TextView
                        style="@style/NormalText"
                        android:id="@+id/shooting_lakers"
                        android:text="@string/default_score" />

                    <TextView
                        style="@style/NormalText"
                        android:id="@+id/shooting"
                        android:text="@string/shooting" />

                    <TextView
                        style="@style/NormalText"
                        android:id="@+id/shooting_thunders"
                        android:text="@string/default_score"/>
                </TableRow>

                <TableRow android:layout_width="match_parent"
                    android:paddingBottom="10dp">

                    <TextView
                        style="@style/NormalText"
                        android:id="@+id/free_throws_lakers"
                        android:text="@string/default_score" />

                    <TextView
                        style="@style/NormalText"
                        android:id="@+id/free_throws"
                        android:text="@string/free_throws"/>

                    <TextView
                        style="@style/NormalText"
                        android:id="@+id/free_throws_thunder"
                        android:text="@string/default_score"/>
                </TableRow>


                <TableRow android:layout_width="match_parent"
                    android:paddingBottom="10dp">

                    <TextView
                        style="@style/NormalText"
                        android:id="@+id/two_pointers_lakers"
                        android:text="@string/default_score" />

                    <TextView
                        style="@style/NormalText"
                        android:id="@+id/two_pointers"
                        android:text="@string/two_pointers"/>

                    <TextView
                        style="@style/NormalText"
                        android:id="@+id/two_pointers_thunder"
                        android:text="@string/default_score" />
                </TableRow>



                <TableRow android:layout_width="match_parent"
                    android:paddingBottom="10dp">

                    <TextView
                        style="@style/NormalText"
                        android:id="@+id/three_pointers_lakers"
                        android:text="@string/default_score"/>

                    <TextView
                        style="@style/NormalText"
                        android:id="@+id/three_pointers"
                        android:text="@string/three_pointers" />

                    <TextView
                        style="@style/NormalText"
                        android:id="@+id/three_pointers_thunder"
                        android:text="@string/default_score"/>
                </TableRow>



                <TableRow android:layout_width="match_parent"
                    android:paddingBottom="10dp">

                    <TextView
                        style="@style/NormalText"
                        android:id="@+id/fouls_lakers"
                        android:text="@string/default_score" />

                    <TextView
                        style="@style/NormalText"
                        android:id="@+id/fouls"
                        android:text="@string/fouls"/>

                    <TextView
                        style="@style/NormalText"
                        android:id="@+id/fouls_thunder"
                        android:text="@string/default_score"/>
                </TableRow>


                <TableRow android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:paddingBottom="10dp">


                    <com.google.android.material.button.MaterialButtonToggleGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:selectionRequired="false"
                        app:singleSelection="true"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/lakers_minus_btn"
                            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:icon="@drawable/ic_minus_symbol" />

                        <Button
                            android:id="@+id/lakers_score_amount_btn"
                            android:enabled="false"
                            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:height="30sp"
                            android:width="30sp"
                            android:text="@string/default_score_addition" />

                        <Button
                            android:id="@+id/lakers_add_btn"
                            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:icon="@drawable/ic_baseline_add_24" />

                    </com.google.android.material.button.MaterialButtonToggleGroup>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center"
                        android:gravity="center"
                        android:lineSpacingMultiplier="1.5"
                        android:text="@string/dash"
                        android:textColor="#000"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <com.google.android.material.button.MaterialButtonToggleGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:selectionRequired="false"
                        app:singleSelection="true"
                        android:layout_gravity="center">

                        <Button
                            android:id="@+id/thunder_minus_btn"
                            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:icon="@drawable/ic_minus_symbol" />

                        <Button
                            android:id="@+id/thunder_score_amount_btn"
                            android:enabled="false"
                            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:height="30sp"
                            android:width="30sp"
                            android:text="@string/default_score_addition"/>

                        <Button
                            android:id="@+id/thunder_add_btn"
                            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:icon="@drawable/ic_baseline_add_24" />

                    </com.google.android.material.button.MaterialButtonToggleGroup>

                </TableRow>
            </TableLayout>


            <TextView
                android:id="@+id/score_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:gravity="center"
                android:text="@string/scored_by"
                android:textColor="#000"
                android:lineSpacingMultiplier="1.5"
                android:textStyle="bold"
                android:textSize="22sp"/>

            <RadioGroup
                android:id="@+id/point_group"
                android:checkedButton="@+id/one_points_rd"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10sp"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/one_points_rd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/_1_point"/>
                <RadioButton
                    android:id="@+id/two_points_rd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"

                    android:text="@string/_2_points"/>
                <RadioButton
                    android:id="@+id/three_points_rd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/_3_points"/>
            </RadioGroup>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>



